--- a/CSS Essentials/Flex Box/style.css
+++ b/CSS Essentials/Flex Box/style.css
@@ -1,21 +1,48 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    margin: 20px
 }
-.container{
-    border:2px solid black;
-    height:80vh;
-    width:100vw;
+
+body {
     display: flex;
-    align-items:center;
-    justify-content:space-evenly;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 
 }
-.item{
-    border: 2px solid violet;
-    height: 30px;
+
+.container {
+    border: 2px solid rgb(167, 10, 10);
+    height: 80vh;
+    width: 90vw;
+    display: flex;
+    /* flex-direction: column; */
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* flex-wrap:nowrap; */
+    flex-wrap: wrap;
+    align-content: center;
+    /* gap: 20px 10px; */
+}
+
+.item {
+    border: 2px solid rgb(0, 0, 0);
+    background-color: violet;
+    margin: 20px;
+    height: 60px;
     width: 30px;
-    background-color: aquamarine;
+    border-radius: 16vh;
+    /* flex-grow:1; */
+    /* flex-shrink: 1; */
+}
+
+.order1 {
+    order: 1;
+}
+
+.item2 {
+    /* flex-grow:2; */
+    /* flex-shrink: 2; */
 }
